доработка загрузки дерева

--- a/escom-bpm-web/src/main/webapp/view/templ/tree/tree.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/tree/tree.xhtml
@@ -53,7 +53,8 @@
 
                     <p:ajax event="select" listener="#{_bean.onTreeNodeSelect}"
                             update="westFRM mainFRM #{_updates}"
-                            oncomplete="initDND()"/>
+                            onstart="PF('statusDialog').show()"
+                            oncomplete="PF('statusDialog').hide(); initDND();"/>
                     <p:ajax event="contextMenu" listener="#{_bean.onTreeNodeSelect}"
                             update="westFRM:accord:toolbarTree mainFRM #{_updates}"
                             oncomplete="initDND()"/>
