поиск документов по компании

--- a/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
@@ -27,6 +27,13 @@
     
     <!-- специфичные поля поиска -->
     <ui:define name="searche">         
+        <p:outputLabel value="#{bundle.Company}:" indicateRequired="true"/>
+        <p:selectOneMenu value="#{_bean.model.companySearche}" filter="true" converter="companyConvertor"                         
+                        widgetVar="companySearche"
+                        styleClass="ui-grid-col-12">
+                <f:selectItems value="#{companyBean.findAll()}" var="org" itemLabel="#{org.name}" itemValue="#{org}" />  
+        </p:selectOneMenu> 
+        
         <p:selectBooleanCheckbox itemLabel="#{bundle.FullTextSearche}" widgetVar="cbFullSearche"
                                  title="#{bundle.FullTextSearcheMode}"
                                  value="#{_bean.model.fullTextSearche}">
@@ -144,6 +151,10 @@
 
     <!-- специфичные поля таблицы обозревателя -->
     <ui:define name="specDetailColumns">
+        <p:column headerText="#{bundle.Company}" sortBy="#{item.company.name}" width="90" priority="3">
+            <h:outputText value="#{item.getClass().getSimpleName() == 'Doc' ? item.company.name : ''}"/>
+        </p:column>
+        
         <p:column headerText="#{bundle.Type}" sortBy="#{item.docType.name}" width="90" priority="4">
             <h:outputText value="#{item.getClass().getSimpleName() == 'Doc' ? item.docType.name : bundle.Folder}"/>
         </p:column>
