--- a/escom-bpm-web/src/main/webapp/view/templ/templ-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-explorer.xhtml
@@ -42,13 +42,13 @@
 
         <pe:layout fullPage="true" style="font-size: 80%;" stateCookie="#{_bean.getSourceBeanId() != null}">            
 
-            <pe:layoutPane id="west" position="west" rendered="#{_bean.isWestShow()}" resizable="true" size="22%" >
+            <pe:layoutPane id="west" position="west" rendered="#{_bean.isWestShow()}" resizable="true" size="20%" >
                 <h:form id="westFRM" style="font-size: 90%;  height: 100%;" onkeypress="checkEsc();">
                     <ui:include src="/view/templ/tree/tree.xhtml" />
                 </h:form>
             </pe:layoutPane>
 
-            <pe:layoutPane id="east" position="east" rendered="#{_bean.isEastShow()}" resizable="true" size="22%">
+            <pe:layoutPane id="east" position="east" rendered="#{_bean.isEastShow()}" resizable="true" size="23%">
                 <h:form id="eastFRM" style="font-size: 90%;  height: 100%;" onkeypress="checkEsc();">
                     <p:focus context="eastFRM" for="eastFRM:nameSearche"/>           
                     <ui:include src="/view/templ/templ-searche.xhtml">
@@ -103,7 +103,9 @@
                                                  disabled="#{_bean.canCreateItem}"
                                                  rendered="#{_treeBean == null or _bean.isShowTree()}" 
                                                  actionListener="#{_bean.onCreateDetailItem()}">
-                                    <p:ajax event="dialogReturn" update="mainFRM" listener="#{_bean.onUpdateAfterCloseForm}" oncomplete="initDND();"/>
+                                    <p:ajax event="dialogReturn" update="mainFRM" listener="#{_bean.onUpdateAfterCloseForm}" 
+                                            onstart="PF('statusDialog').show()"
+                                            oncomplete="PF('statusDialog').hide(); initDND();"/>
                                 </p:commandButton>                                    
 
                                 <p:commandButton value="#{bundle.SelectChecked}" icon="ui-icon-check" 
