--- a/escom-bpm-web/src/main/webapp/view/templ/tree/tree.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/tree/tree.xhtml
@@ -9,20 +9,20 @@
                      actionListener="#{_bean.onCreateTreeItem()}" 
                      onstart="PF('statusDialog').show()"
                      oncomplete="PF('statusDialog').hide();"> 
-        <p:ajax event="dialogReturn" update="westFRM mainFRM" listener="#{_bean.onUpdateAfterCloseForm}" oncomplete="initDND()"/>
+        <p:ajax event="dialogReturn" update="mainFRM" listener="#{_bean.onUpdateAfterCloseForm}" oncomplete="initDND()"/>
     </p:commandButton>
     <p:commandButton id="createRootCardBtn" style="display: none;"
                      actionListener="#{_bean.onCreateRootItem()}" 
                      onstart="PF('statusDialog').show()"
                      oncomplete="PF('statusDialog').hide();"> 
-        <p:ajax event="dialogReturn" update="westFRM mainFRM" listener="#{_bean.onUpdateAfterCloseForm}" oncomplete="initDND()"/>
+        <p:ajax event="dialogReturn" update="mainFRM" listener="#{_bean.onUpdateAfterCloseForm}" oncomplete="initDND()"/>
     </p:commandButton>
 
     <p:commandButton id="openTreeCardBtn" style="display: none;"
                      actionListener="#{_bean.onEditTreeItem()}"
                      onstart="PF('statusDialog').show()"
                      oncomplete="PF('statusDialog').hide();" > 
-        <p:ajax event="dialogReturn" update="westFRM mainFRM" listener="#{_bean.onUpdateAfterCloseForm}" oncomplete="initDND()"/>
+        <p:ajax event="dialogReturn" update="mainFRM" listener="#{_bean.onUpdateAfterCloseForm}" oncomplete="initDND()"/>
     </p:commandButton>
 
     <p:commandButton id="viewTreeCardBtn" style="display: none;"
