--- a/escom-bpm-web/src/main/webapp/view/errors/expire.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/errors/expire.xhtml
@@ -12,8 +12,8 @@
 
     <ui:define name="body">
 
-        <h:form >
-            <p:panel styleClass="panelLogin">
+        <h:form style="height: 350px;">
+            <p:panel styleClass="panelLogin" style="height: 100%;">
                 <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-4, ui-grid-col-8" styleClass="ui-grid-col-12 without-spaces">
                     <p:graphicImage name="/images/session_expired.jpg"  />
                     <h:panelGroup style="width: 100%;">
