--- a/escom-bpm-web/src/main/webapp/view/templ/table.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/table.xhtml
@@ -10,7 +10,8 @@
                  paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                  rowsPerPageTemplate="5, 10, 15, 20, 35, 50, 75" rows="#{_bean.rowsInPage}"
                  currentPageReportTemplate="#{bundle.CountRecords}: {totalRecords}, #{bundle.Showing} {startRecord}-{endRecord} "
-                 tableStyle="table-layout: auto;" styleClass="ui-grid-col-12 without-spaces" style="font-size: 90%;"                 
+                 tableStyle="table-layout: auto;" styleClass="ui-grid-col-12 without-spaces" style="font-size: 90%;"
+                 sortBy="#{item.name}"
                  selection="#{_bean.checkedItems}">
 
         <f:facet name="header">
